# passman

./: .gitignore  README.md  index.py  pyproject.toml
src/passman/: config.py  crypto.py  main.py  storage.py  ui.py  utils.py
